--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
     <header class="container p-0" style="background-color:rgba(25,30,0,0.3);">
      
      <div class="navbar-header text-right p-0">
-      sasass
+     mariansasa
      </div>
       
       <!-- HEADER -->
@@ -75,19 +75,8 @@
             <!-- <li class="nav-item"><a class="nav-link disabled" href="#">Disabled</a></li> -->
           </ul>
         </div>
-
       </nav>
       <!-- HEADER -->
-
-
-
-
-
-
-
-
-
-
 
     </header>
     <!-- HEADER -->
@@ -131,9 +120,17 @@
         </a>
       </div>
 
+      <div class="container">
       <article>
-        sasas
+        Ludum mutavit. Verbum est ex. Et ... sunt occidat. Videtur quod est super omne oppidum. Quis transfretavit tu iratus es contudit cranium cum dolor apparatus. Qui curis! Modo nobis certamen est, qui non credunt at. 
+
+Nonne vides quid sit? Tu es ... Jesse me respice. Tu ... blowfish sunt. A blowfish! Cogitare. Statura pusillus, nec sapientium panem, nec artificum. Sed predators facile prædam blowfish secretum telum non se habet. Non ille? Quid faciam blowfish, Isai. Blowfish quid faciat? In blowfish inflat, purus? 
+
+Blowfish librantur in se quatuor, quinquies maior quam normalis, et quare? Quare id faciam? Ut terrorem facit, qui quid. Terrent! Ut alter, scarier pisces agminis off. Et quod tu es? Vos blowfish. Tu iustus in omnibus visio. Vides ... suus ' suus 'non aliud aerem. Nunc ... qui cum partibus blowfish Isai? Tu damnare ius. Vos blowfish. Dicere iterum. Dicere illam quasi velis eam. Es BLOWFISH! 
+
+Ut sibi fuerat socius sagittis. Ego intervenerit. Vere quia a te nuper iratus occidit illos undecim annorum puer. Deinde, si hoc forte qui fuit imperavit. 
       </article>
+      </div>
 
     </main>  
 
